[package]
name = "cassini"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
num-bigint = "0.4.6"
rand = "0.9.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twenty-first = "0.48.0"
